# clipster

./: .gitignore  Cargo.toml  README.md
src/: audio_processing.rs  audio_recorder.rs  main.rs
src/ai/: remote.rs
src/ai/local/: whisper.rs
src/ai/remote/: anthropic.rs  openai.rs  traits.rs
