[package]
name = "clipster"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.6"
async-trait = "0.1"
global-hotkey = "0.7"
notify-rust = "4"
reqwest = { version = "0.12", features = ["json"] }
rodio = "0.21"
rubato = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48", features = ["full"] }
tokio-macros = "2.6"
whisper-rs = "0.15"

[dev-dependencies]
mockito = "1"
